--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ title: Blog
         <br/>
         <h2>
             <a href="{{ post.url }}">
-                {{ post.date | date: "%a, %b %d, %y" | append: "--" | append: post.title }}
+                {{ post.date | date_to_string | append: " -- " | append: post.title }}
             </a>
         </h2>
         <!-- <p>{{ post.excerpt }}</p> -->
