Update about page

--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@ title: About
 ---
 
 <div class="content">
-    {% capture about %}
+    <div class="about">
+        {% capture about %}
         {% include about.md %}
-    {% endcapture %}
-    {{ about | markdownify }}
-    <!-- {% include about.md %} -->
+        {% endcapture %}
+        {{ about | markdownify }}
+    </div>
 </div>
-
